  :mod:`pygment` is also added).
  
- New module :mod:`rpy2.robjects.lib.tidyr` providing a custom
  wrapper for the R library `tidyr`


Release 2.7.3
=============

Bugs fixed
----------

- method :meth:`DataFrame.collect` in :mod:`rpy2.robjects.lib.dplyr`
  was not functioning.

- - Applied patch by Matthias Klose to fix implict pointer conversions.


Release 2.7.2
=============

Bugs fixed
----------

- methods `distinct`, `sample_n`, and `sample_frac` defined in the R package
  `rplyr` were missing from the `DataFrame` definition in
  :mod:`rpy2.robjects.lib.dplyr`

- The fix for the inheritance problem with
  :mod:`rpy2.robjects.lib.dplyr.DataFrame` introduced a regression whenever
  `group_by` is used.

- The methods to perform joins on dplyr `DataFrame` objects where not
  working properly.


Release 2.7.1
=============
 
Bugs fixed
----------

- The :meth:`__repr__` for :mod:`robjects`-level vectors
  was broken for vectors of length 1 (issue #306)

- The ipython notebook-based sections of the documentation
  were not building

- Classes inheriting from :mod:`dplyr.DataFrame` had dplyr methods
  returning objects of their parent class.

Release 2.7.0
=============

New features
------------

- New exception :class:`rpy2.rinterface.RParsingError`. Errors
  occurring when parsing R code through :func:`rpy2.rinterface.parse`
  raise this exception (previously :class:`rpy2.rinterface.RRuntimeError`).

- New class :class:`rpy2.robjects.conversion.Converter` to replace
  the `namedtuple` of the same name

- New class :class:`rpy2.robjects.converter.ConversionContext`. This is
  a context manager allowing an easy setting of local conversion rules.
  The constructor has an alias called
  :meth:`rpy2.robjects.constructor.localconverter`.

- New module :mod:`rpy2.robjects.lib.dplyr` providing a custom
  wrapper for the R library `dplyr`

- Method :method:`Environment.items()` to iterate through the symbols
  and associated objects in an R environment.
