@@ -106,6 +106,8 @@ DataFrame.right_join = _wrap2(dplyr.right_join, None)
 DataFrame.full_join = _wrap2(dplyr.full_join, None)
 DataFrame.semi_join = _wrap2(dplyr.semi_join, None)
 DataFrame.anti_join = _wrap2(dplyr.anti_join, None)
+DataFrame.union = _wrap2(dplyr.union, None)
+
 DataFrame.sample_n = _wrap(dplyr.sample_n, None)
 DataFrame.sample_frac = _wrap(dplyr.sample_frac, None)
 DataFrame.slice = _wrap(dplyr.slice_, None)
@@ -129,6 +131,7 @@ right_join = _make_pipe2(dplyr.right_join, DataFrame)
 full_join = _make_pipe2(dplyr.full_join, DataFrame)
 semi_join = _make_pipe2(dplyr.semi_join, DataFrame)
 anti_join = _make_pipe2(dplyr.anti_join, DataFrame)
+union = _make_pipe2(dplyr.union, DataFrame)
 sample_n = _make_pipe(dplyr.sample_n, DataFrame)
 sample_frac = _make_pipe(dplyr.sample_frac, DataFrame)
 slice = _make_pipe(dplyr.slice_, DataFrame)
